<resources>
    <string name="app_name">About Me</string>
    <string name="name">Messiah Celedonio</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio">Good day. I am Messiah Celedonio, a software engineer with more than 5 years experience in different areas of the IT industry. I\'ve done both mobile and web development, provided technical support to clients, worked as a part of a team, and focused on driving results individually.

        I would like to apply for the position of Junior Android Developer at your company because I believe my passion and skills would be an essential asset for the company. My experience in both my present and past companies helped me develop skills like product development, time management, setting client expectations, and other technical skills that I believe will be a great addition to your team. I\'ve worked for global and domestic companies, picking up best practices and processes to understand and react better to different scenarios.

        In my personal time, I make it a point to set at least an hour a day to improve my knowledge about mobile development. This includes doing personal mobile app projects, taking courses like Kotlin for Java Developer and Kotlin for Android Developer, and reading online articles about the latest trends and technologies used in mobile development.

        I believe I will be able to contribute to your company and its developmemt team with the skills I have learned and developed over the years. Likewise, I believe I would learn a lot about mobile development, best practices, and latest technologies while working with your company.

        My CV explains in more detail the work experience and programming languages I learned over the years. I hope I\'ll be given a chance to prove I have what it takes to be a valuable employee at your company. Looking forward to hearing from you soon.</string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="done">Done</string>
</resources>
